--- a/TFG_MetodosEstadisticosBaloncesto.tex
+++ b/TFG_MetodosEstadisticosBaloncesto.tex
@@ -251,17 +251,79 @@ De este análisis, es frecuente encontrar variantes: mapa de calor del equipo, m
 
 \subsection{Real Plus-Minus, RPM}
 
+(explicar cada concepto y su manera de calcularlo o en base a que se calcula)
+
+Tabla de diferencias ?
+
 \clearpage
 
+\begin{Schunk}
+\begin{Soutput}
+# A tibble: 26,477 x 6
+   season game_code play_number play_type away_player4 away_player5
+    <dbl>     <dbl>       <dbl> <chr>     <chr>        <chr>       
+ 1   2008         2          48 IN        BLU, DAVID   BLU, DAVID  
+ 2   2008         2          49 IN        BLU, DAVID   BLU, DAVID  
+ 3   2008         2          50 OUT       BLU, DAVID   BLU, DAVID  
+ 4   2008         2          51 OUT       BLU, DAVID   BLU, DAVID  
+ 5   2008         2          52 OUT       BLU, DAVID   BLU, DAVID  
+ 6   2008         2          53 CPF       BLU, DAVID   BLU, DAVID  
+ 7   2008         2          54 RPF       BLU, DAVID   BLU, DAVID  
+ 8   2008         2          55 FTM       BLU, DAVID   BLU, DAVID  
+ 9   2008         2          56 FTM       BLU, DAVID   BLU, DAVID  
+10   2008         2          57 TOV       BLU, DAVID   BLU, DAVID  
+# ... with 26,467 more rows
+\end{Soutput}
+\begin{Soutput}
+  season        game_code      play_number      team_code    
+ 2008:92923   93     :  611   4      :  185   BAR    : 5632  
+              100    :  606   295    :  185   OLY    : 5555  
+              149    :  602   3      :  183   PAR    : 5431  
+              96     :  599   2      :  182   PAN    : 5381  
+              80     :  590   155    :  181   BAS    : 5068  
+              165    :  590   203    :  181   (Other):65085  
+              (Other):89325   (Other):91826   NA's   :  771  
+ player_name          play_type     time_remaining       quarter     
+ Length:92923       IN     : 9401   Length:92923      Min.   :1.000  
+ Class :character   OUT    : 9400   Class1:hms        1st Qu.:2.000  
+ Mode  :character   DRB    : 8316   Class2:difftime   Median :3.000  
+                    RPF    : 7876   Mode  :numeric    Mean   :2.564  
+                    CPF    : 7389                     3rd Qu.:4.000  
+                    FTM    : 5729                     Max.   :5.000  
+                    (Other):44812                                    
+  points_home     points_away     play_info            seconds    
+ Min.   : 0.00   Min.   : 0.00   Length:92923       Min.   :  60  
+ 1st Qu.:11.00   1st Qu.:10.00   Class :character   1st Qu.: 660  
+ Median :22.00   Median :19.00   Mode  :character   Median :1260  
+ Mean   :22.89   Mean   :21.07                      Mean   :1278  
+ 3rd Qu.:34.00   3rd Qu.:31.00                      3rd Qu.:1860  
+ Max.   :75.00   Max.   :69.00                      Max.   :2700  
+                                                                  
+  home_team          away_team            home          team_name        
+ Length:92923       Length:92923       Mode :logical   Length:92923      
+ Class :character   Class :character   FALSE:45714     Class :character  
+ Mode  :character   Mode  :character   TRUE :46438     Mode  :character  
+                                       NA's :771                         
+                                                                         
+                                                                         
+                                                                         
+  last_ft           and1        
+ Mode :logical   Mode :logical  
+ FALSE:89829     FALSE:92484    
+ TRUE :3094      TRUE :439      
+\end{Soutput}
+\begin{Soutput}
+[1] 2072
+\end{Soutput}
+\end{Schunk}
 
 
 \section{Análisis y métodos}
 
 \subsection{Descripción de la base de datos}
 
-En este estudio vamos a analizar los datos de todas las jugadas registradas en partidos oficiales de la temporada 2018 de la Liga Nacional de ACB para buscar el Más/Menos Ajustado. Tenemos un total de $N=$ 134919 jugadas, y 252 jugadores en 18 equipos.
+En este estudio vamos a analizar los datos de todas las jugadas registradas en partidos oficiales de la temporada 2018 de la Liga Nacional de ACB para buscar el Más/Menos Ajustado. Tenemos un total de $N=$ 92923 jugadas, y 361 jugadores en 25 equipos.
 
-Esta base de datos contenia mucha información (29 variables), por lo que hemos seleccionado nuestras variables de interés: season, game_code, quarter, seconds, points_home, 
 
 
 
@@ -295,7 +357,492 @@ Esta base de datos contenia mucha información (29 variables), por lo que hemos 
 
 \clearpage
 
-\subsection{Code} \label{sec:Annexo2}
+\subsection{Code}
+
+\textbf{Datos}
+
+\begin{Schunk}
+\begin{Sinput}
+> library(readr)
+> library(dplyr)
+> library(ggplot2)
+> library(here)
+> library(tidyverse)
+> library(tidyr)
+> library(dplyr)
+> library(chron)                 # Para CHR_to_seconds
+> library(stringr)               # Para str_pad
+> library(lubridate)
+> library(reshape)
+> library(tidyselect)
+> library(corrplot)
+> library(RColorBrewer)
+> library("colorspace")
+> library(graphics)
+> library(rpart)
+> library(ggplot2)
+> library(car)                   # VIF
+> #ERROR SOLUCION
+> pbp_2008 <- read_csv("pbp2008.csv")
+> ## Check how many rows are affected by this
+> bad_lineups <- pbp_2008 %>%
++   select(matches("_player[1-5]")) %>%
++   apply(1, function(x) max(table(x)) > 1)
+> pbp_bad <- pbp_2008 %>%
++   filter(bad_lineups)
+> pbp_bad %>%
++   select(season, game_code, play_number, play_type, away_player4, away_player5)
+\end{Sinput}
+\begin{Soutput}
+# A tibble: 26,477 x 6
+   season game_code play_number play_type away_player4 away_player5
+    <dbl>     <dbl>       <dbl> <chr>     <chr>        <chr>       
+ 1   2008         2          48 IN        BLU, DAVID   BLU, DAVID  
+ 2   2008         2          49 IN        BLU, DAVID   BLU, DAVID  
+ 3   2008         2          50 OUT       BLU, DAVID   BLU, DAVID  
+ 4   2008         2          51 OUT       BLU, DAVID   BLU, DAVID  
+ 5   2008         2          52 OUT       BLU, DAVID   BLU, DAVID  
+ 6   2008         2          53 CPF       BLU, DAVID   BLU, DAVID  
+ 7   2008         2          54 RPF       BLU, DAVID   BLU, DAVID  
+ 8   2008         2          55 FTM       BLU, DAVID   BLU, DAVID  
+ 9   2008         2          56 FTM       BLU, DAVID   BLU, DAVID  
+10   2008         2          57 TOV       BLU, DAVID   BLU, DAVID  
+# ... with 26,467 more rows
+\end{Soutput}
+\begin{Sinput}
+> ## Solucion
+> source(here("R", "fix-lineups.R"))
+> ## Function fix_lineups() only takes data from a single game,
+> ## so I split the data and apply the function to each splitted data frame.
+> pbp_2008_fixed <- split(pbp_2008, factor(pbp_2008$game_code)) %>%
++   map_df(fix_lineups) 
+> pbp_2009 <- read_csv("pbp2009.csv")
+> pbp_2009_fixed <- split(pbp_2009, factor(pbp_2009$game_code)) %>%
++   map_df(fix_lineups) 
+> pbp_2010 <- read_csv("pbp2010.csv")
+> pbp_2010_fixed <- split(pbp_2010, factor(pbp_2010$game_code)) %>%
++   map_df(fix_lineups) 
+> pbp_2011 <- read_csv("pbp2011.csv")
+> pbp_2011_fixed <- split(pbp_2011, factor(pbp_2011$game_code)) %>%
++   map_df(fix_lineups) 
+> pbp_2012 <- read_csv("pbp2012.csv")
+> pbp_2012_fixed <- split(pbp_2012, factor(pbp_2012$game_code)) %>%
++   map_df(fix_lineups) 
+> pbp_2013 <- read_csv("pbp2013.csv")
+> pbp_2013_fixed <- split(pbp_2013, factor(pbp_2013$game_code)) %>%
++   map_df(fix_lineups) 
+> pbp_2014 <- read_csv("pbp2014.csv")
+> pbp_2014_fixed <- split(pbp_2014, factor(pbp_2014$game_code)) %>%
++   map_df(fix_lineups) 
+> pbp_2015 <- read_csv("pbp2015.csv")
+> pbp_2015_fixed <- split(pbp_2015, factor(pbp_2015$game_code)) %>%
++   map_df(fix_lineups) 
+> pbp_2017 <- read_csv("pbp2017.csv")
+> pbp_2017_fixed <- split(pbp_2017, factor(pbp_2017$game_code)) %>%
++   map_df(fix_lineups) 
+> pbp_2018 <- read_csv("pbp2018.csv")
+> pbp_2018_fixed <- split(pbp_2018, factor(pbp_2018$game_code)) %>%
++   map_df(fix_lineups) 
+> pbd_datos_fixed <- pbp_2008_fixed
+> factor_names <- c('season', 'game_code', 'team_code', 'play_number', 'play_type')
+> pbd_datos_fixed[,factor_names] <- lapply(pbd_datos_fixed[,factor_names] , factor)
+> summary(pbd_datos_fixed[1:18])
+\end{Sinput}
+\begin{Soutput}
+  season        game_code      play_number      team_code    
+ 2008:92923   93     :  611   4      :  185   BAR    : 5632  
+              100    :  606   295    :  185   OLY    : 5555  
+              149    :  602   3      :  183   PAR    : 5431  
+              96     :  599   2      :  182   PAN    : 5381  
+              80     :  590   155    :  181   BAS    : 5068  
+              165    :  590   203    :  181   (Other):65085  
+              (Other):89325   (Other):91826   NA's   :  771  
+ player_name          play_type     time_remaining       quarter     
+ Length:92923       IN     : 9401   Length:92923      Min.   :1.000  
+ Class :character   OUT    : 9400   Class1:hms        1st Qu.:2.000  
+ Mode  :character   DRB    : 8316   Class2:difftime   Median :3.000  
+                    RPF    : 7876   Mode  :numeric    Mean   :2.564  
+                    CPF    : 7389                     3rd Qu.:4.000  
+                    FTM    : 5729                     Max.   :5.000  
+                    (Other):44812                                    
+  points_home     points_away     play_info            seconds    
+ Min.   : 0.00   Min.   : 0.00   Length:92923       Min.   :  60  
+ 1st Qu.:11.00   1st Qu.:10.00   Class :character   1st Qu.: 660  
+ Median :22.00   Median :19.00   Mode  :character   Median :1260  
+ Mean   :22.89   Mean   :21.07                      Mean   :1278  
+ 3rd Qu.:34.00   3rd Qu.:31.00                      3rd Qu.:1860  
+ Max.   :75.00   Max.   :69.00                      Max.   :2700  
+                                                                  
+  home_team          away_team            home          team_name        
+ Length:92923       Length:92923       Mode :logical   Length:92923      
+ Class :character   Class :character   FALSE:45714     Class :character  
+ Mode  :character   Mode  :character   TRUE :46438     Mode  :character  
+                                       NA's :771                         
+                                                                         
+                                                                         
+                                                                         
+  last_ft           and1        
+ Mode :logical   Mode :logical  
+ FALSE:89829     FALSE:92484    
+ TRUE :3094      TRUE :439      
+\end{Soutput}
+\end{Schunk}
+
+\textbf{Categorización y edición de BBDD}
+
+\begin{Schunk}
+\begin{Sinput}
+> #CATEGORIZACION BBDD
+> df <- pbd_datos_fixed
+> N_df <- dim(df)[1] # Numero de jugadas
+> M_df <- dim(df)[2] # Numero de variables
+> df_fact <- df %>%
++   select(season, game_code, team_code, player_name, team_name) %>%
++   mutate(season = as.factor(season),
++          team_code = as.factor(team_code),
++          player_name = as.factor(player_name),
++          team_name = as.factor(team_name))
+> num_teams <- length(levels(df_fact$team_name)) # Numero de equipos
+> # Lista de jugadores:
+> players <- df %>% 
++   select(matches("player_name")) %>%
++   arrange(player_name) %>% 
++   unique() %>% 
++   drop_na()
+> players <- players$player_name
+> num_players <- length(players)   # Numero de jugadores
+> df_pbp <- df %>% 
++   select(season, game_code, quarter, seconds, points_home, points_away, home_team, away_team, matches("_player[1-5]"))
+\end{Sinput}
+\end{Schunk}
+
+textbf{Modificar variable tiempo} 
+
+Para facilitar los calculos con el tiempo, se va a pasar los mm:ss a segundos. 
+
+\begin{itemize}
+\item CHR\_to\_seconds: Para pasar la variable tiempo que nos llega como chracter a segundos.
+\item Print\_MS: Que nos devolverá los segundos a formato mm:SS (se hará servir más adelante)
+
+\end{itemize}
+
+\begin{Schunk}
+\begin{Sinput}
+> CHR_to_seconds <- function(x){
++   a <- as.POSIXct(x, tz = '', format = "%H:%M:%S", usetz = FALSE)
++   tms <- secondss(format(a, "%H:%M:%S"))
++   s <- period_to_seconds(hms(tms))
++   return(s)
++ }
+> Print_MS <- function(x){
++   t <- seconds_to_period(x)
++   sprintf('%02d:%02d:%02d', t@hour, minute(t), second(t))
++ }
+\end{Sinput}
+\end{Schunk}
+
+\textbf{Lista Jugadores-Equipo}
+
+\begin{Schunk}
+\begin{Sinput}
+> TP_home <- df_pbp %>%
++   select(c(contains("home_"))) %>%
++   unique()
+> TP_away <- df_pbp %>%
++   select(c(contains("away_"))) %>%
++   unique()
+> CBIND_MultipleCol_n <- function(data,col,n){
++   d <- unlist(data[col])
++   x <- cbind(rep(d, n))
++   y <- unlist(data[-1])
++ 
++   res <- cbind(x, y)
++   rownames(res) <- NULL
++   
++   res <- unique(res)
++   
++   return(res)
++ }
+> TeamPlayers_home <- CBIND_MultipleCol_n(TP_home, 1, 5)
+> TeamPlayers_away <- CBIND_MultipleCol_n(TP_away, 1, 5)
+> TeamPlayers <- rbind(TeamPlayers_home, TeamPlayers_away) %>%
++   as.data.frame() %>%
++   `colnames<-`(c("Team", "Player")) %>%
++   arrange(Team) %>%
++   unique()
+> Players_Sorted_byTeam <- TeamPlayers$Player
+\end{Sinput}
+\end{Schunk}
+
+\textbf{Lineups}
+
+Se crea variable \emph{lineups} que recoge los quintetos de ambos equipos en pista.
+
+
+\begin{Schunk}
+\begin{Sinput}
+> Lineups_PasteSort <- function(x) {
++   paste(sort(x), collapse = " - ")
++ }
+> lineup_home <- df_pbp %>% select(contains("home_p"))
+> lineup_away <- df_pbp %>% select(contains("away_p"))
+> lineups     <- cbind(lineup_home, lineup_away)
+> lineup_home_sorted <- apply(lineup_home, 1, Lineups_PasteSort)
+> lineup_away_sorted <- apply(lineup_away, 1, Lineups_PasteSort)
+> lineups_sorted     <- apply(lineups, 1, Lineups_PasteSort)
+> #lineups
+> df_lineups_sorted <- df_pbp %>%
++   mutate(lineup = lineups_sorted,
++     lineup_home = lineup_home_sorted,
++     lineup_away = lineup_away_sorted
++   ) %>% select(-contains("_player"))
+\end{Sinput}
+\end{Schunk}
+
+\textbf{MERGE Temporada+game_code}
+
+Se modifica variable \emph{game\_code} para que quede categorizada con el mismo numero de caracteres. Y unimos \emph{Season} y \emph{Game\_Code} para tener una variable identificadora del partido.
+
+\begin{Schunk}
+\begin{Sinput}
+> df_merged <- df_lineups_sorted %>%
++   mutate(game_code = paste0("G", str_pad(game_code, 6, pad = "0")), 
++                      quarter   = paste0("Q", quarter)) %>%
++   unite("SeasonGame", c("season", "game_code"))
+\end{Sinput}
+\end{Schunk}
+
+\textbf{Quintetos (Stints)}
+
+Queremos obtener un df con los quintetos identificados cada vez que se produce un cambio. Se dejaran aquellos que esten duplicados ya que es necesario diferenciarlos para posteriormente poder hacer el Mas/Menos correctamente. 
+
+\begin{Schunk}
+\begin{Sinput}
+> df_stints <- df_merged %>%
++   arrange(SeasonGame) %>%
++   mutate(StintChanged = (lineup != lag(lineup)),
++          StintChanged = replace_na(StintChanged, TRUE),
++          stint        = cumsum(StintChanged))
+> df_reduced <- df_stints %>%
++   mutate(StintRemove  = (stint == lead(stint)),
++          StintRemove  = replace_na(StintRemove, FALSE)) %>%
++   filter(StintRemove != TRUE)
+\end{Sinput}
+\end{Schunk}
+
+\textbf{Más/Menos}
+
+Obtenemos el Mas/Menos segun cada stint. Se tendrá en cuenta el cambio de partido.
+Además, esta variable estara hecha con HOME como referencia, pero eso no hace ninguna diferencia estadística importante en nuestro resultado final.
+
+
+\begin{Schunk}
+\begin{Sinput}
+> PlusMinus_function <- function(h,a){
++   (h-lag(h))-(a-lag(a))
++ }
+> #Home como referencia
+> df_PlusMinus <- df_reduced %>%
++   group_by(SeasonGame) %>%
++   mutate(
++     stint_seconds = ifelse(is.na(lag(seconds)), seconds, seconds - lag(seconds)),
++     PlusMinus  = ifelse(is.na(lag(seconds)), points_home - points_away,
++                        PlusMinus_function(points_home, points_away))
++   ) %>% ungroup()
+> df_PlusMinus_reduced <- df_PlusMinus %>% 
++   select(c(SeasonGame, quarter, lineup, lineup_home, lineup_away, stint_seconds, PlusMinus)) 
+> #Eliminar stints duplicados
+> df_PlusMinus_reduced_bylineups <- df_PlusMinus_reduced %>% 
++   group_by(SeasonGame, quarter, lineup, lineup_home, lineup_away) %>% 
++   summarise(
++     stint_seconds = sum(stint_seconds),
++     PlusMinus  = sum(PlusMinus) ) %>% 
++   ungroup() %>%
++   as.data.frame()
+\end{Sinput}
+\end{Schunk}
+
+\subsection{PARTE 2: Dummys Jugadores}
+
+\begin{Schunk}
+\begin{Sinput}
+> #10min aprox
+> df_dummys_H <- fastDummies::dummy_cols(df_PlusMinus_reduced_bylineups, 
++                                        select_columns = "lineup_home", 
++                                        split = "-")
+> df_dummys_A <- fastDummies::dummy_cols(df_PlusMinus_reduced_bylineups, 
++                                        select_columns = "lineup_away", 
++                                        split = "-") %>% 
++                   mutate(across(starts_with("lineup_away_"), function(x) -x))
+> Remove_firsts_chars_colnames <- function(data, char){
++   num_char <- nchar(char)+1
++   substring(names(data), num_char)
++ }
+> COL_From <- function(data, first_col){
++   last_col = ncol(data)
++   colnames(data[first_col:last_col])
++ }
+> COL_to <- function(data, first_col, char){
++   last_col = ncol(data)
++   Remove_firsts_chars_colnames(data[first_col:last_col], char)
++ }
+> #Primera columna con el nombre de un jugador
+> match <- match(paste0("lineup_away_", players), names(df_dummys_A)) %>%
++             na.omit() %>%
++             min()
+> #match = 8
+> 
+> #nombre columnas sin primeras palabras:
+> col_to_A <- COL_to(df_dummys_A, match, "lineup_away_")
+> col_to_H <- COL_to(df_dummys_H, match, "lineup_home_")
+> df_dummys_A <- df_dummys_A %>% rename_at(vars(COL_From(df_dummys_A,match)), function(x) col_to_A)
+> df_dummys_H <- df_dummys_H %>% rename_at(vars(COL_From(df_dummys_H,match)), function(x) col_to_H)
+> #Juntar los dos DF:
+> df_dummys_A[df_dummys_A == 0] <- NA
+> df_dummys_H[df_dummys_H == 0] <- NA
+> df_dummys <- coalesce(df_dummys_H,df_dummys_A)
+> df_dummys[is.na(df_dummys)] <- 0
+> df_dummys <- df_dummys %>% select(-c(starts_with("lineup_"))) %>% ungroup()
+\end{Sinput}
+\end{Schunk}
+
+Ahora mismo tenemos un DF con el PlusMinus con HOME como referencia (si es positivo, ganaban HOME. Si es Negativo ganaban AWAY). Luego tenemos variables "dummys" con $1$ si estaban jugando como HOME, $-1$ si estaban jugando como AWAY y $0$ si no estaban en pista.
+
+\subsection{PARTE 3: PlusMinus por stint (PlusMinus CLASSIC)}
+
+\begin{Schunk}
+\begin{Sinput}
+> df_dummys_PlusMinus <- df_dummys %>%
++   group_by(SeasonGame, quarter, lineup, stint_seconds) %>%
++   mutate(across(matches(players), function(x) x*PlusMinus)) %>%
++   select(-c(PlusMinus)) %>%
++   ungroup()
+> ### MasMenos de los mismos lineups (sin tener en cuenta SeasonGame o Quarter):
+> 
+> df_dummys_PlusMinus_2 <- df_dummys_PlusMinus %>% select(-c(SeasonGame, quarter))
+> PlusMinus_Lineups <- aggregate(. ~ lineup, df_dummys_PlusMinus_2, sum, na.rm = TRUE) %>%
++                      mutate(stint_seconds = Print_MS(stint_seconds))
+> PlusMinus_Classic <- colSums(PlusMinus_Lineups[3:ncol(PlusMinus_Lineups)])
+> PlusMinus_Classic_df <- as.data.frame(PlusMinus_Classic)
+> PlusMinus_Classic_df <- PlusMinus_Classic_df %>%
++   mutate(Players = rownames(PlusMinus_Classic_df)) %>%
++   arrange(Players) %>%
++   select(Players, PlusMinus_Classic)
+> rownames(PlusMinus_Classic_df) <- NULL
+\end{Sinput}
+\end{Schunk}
+
+Graficos:
+
+\begin{Schunk}
+\begin{Sinput}
+> ggplot(PlusMinus_Classic_df, aes(x=Players, y=PlusMinus_Classic, fill=Players)) +
++   geom_bar(stat="identity")+theme_minimal() + 
++   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+> ## Este util para grupos pequeños de jugadores. Quizas seria util añadir variable equipo y hacer lo mismo pero por equipos.
+> 
+> t<-table(PlusMinus_Classic); t
+\end{Sinput}
+\begin{Soutput}
+PlusMinus_Classic
+-118 -101 -100  -96  -92  -90  -89  -87  -85  -84  -83  -82  -76  -75  -73  -71 
+   1    2    2    1    1    2    3    2    1    1    3    1    1    3    2    1 
+ -70  -68  -67  -65  -64  -63  -62  -61  -57  -55  -54  -52  -51  -48  -47  -46 
+   1    1    1    1    1    2    1    1    4    2    1    3    2    1    2    1 
+ -45  -44  -42  -41  -38  -37  -36  -35  -34  -33  -32  -30  -29  -28  -27  -26 
+   1    3    1    1    4    1    1    3    3    2    4    3    1    3    1    6 
+ -24  -23  -22  -21  -20  -19  -18  -17  -16  -15  -14  -13  -12  -11  -10   -9 
+   3    3    3    3    3    5    4    5    5    4    4    3    3    4    5    3 
+  -8   -6   -5   -4   -3   -2   -1    0    1    2    3    4    5    6    7    8 
+   7    7    5    3    6   10    6   12    8    5    4    7    5    3    6    5 
+   9   10   11   12   13   14   15   16   17   18   19   20   21   22   23   25 
+   3    1    3    4    3    3    1    2    2    4    5    1    4    3    2    1 
+  26   29   30   31   32   33   34   35   36   38   39   40   41   42   44   45 
+   1    3    3    2    3    2    2    1    1    2    2    1    2    3    4    1 
+  46   48   49   50   51   54   57   61   63   66   67   68   70   73   76   78 
+   1    2    1    1    1    1    3    1    2    1    1    1    3    2    1    1 
+  86   88   89   98   99  102  108  111  112  115  118  121  127  143  144  158 
+   1    1    1    1    2    1    1    1    1    1    1    1    1    2    2    1 
+ 188  238 
+   1    1 
+\end{Soutput}
+\begin{Sinput}
+> plot(t)
+> ggplot(PlusMinus_Classic_df, aes(x = PlusMinus_Classic)) +
++   stat_function(
++     fun = dnorm, 
++     args = with(PlusMinus_Classic_df, c(mean = mean(PlusMinus_Classic), 
++                                       sd = sd(PlusMinus_Classic)))
++   ) + scale_x_continuous("Más/Menos clásico")
+\end{Sinput}
+\end{Schunk}
+
+\subsection{PARTE 4: Modelar}
+
+\begin{Schunk}
+\begin{Sinput}
+> df_dummys %>%
++ select(stint_seconds) %>%
++   apply(1, function(x) x < 1) %>%
++   sum()
+\end{Sinput}
+\begin{Soutput}
+[1] 2072
+\end{Soutput}
+\begin{Sinput}
+> #2072 entrades amb seconds=0. Mal recogidos los datos. No se tiene en cuenta segundos reales, sino minutos (60,120, 180...). por lo que al hacer la resta con la jugada anterior aparece 0.
+> 
+> df_dummys2 <- df_dummys  
+> df_dummys2$stint_seconds[df_dummys2$stint_seconds == 0] <- 30 
+> #df_dummys2 <- df_dummys2 %>% drop_na()
+> 
+> 
+> mod1 <- lm(PlusMinus ~ . -SeasonGame -quarter -lineup -stint_seconds, data=df_dummys)
+> sum1  <- summary(mod1)
+> coef1 <- as.data.frame(summary(mod1)$coefficients) %>%
++   arrange(Estimate)
+> mod2 <- lm(PlusMinus/stint_seconds ~ . -SeasonGame -quarter -lineup, data=df_dummys2)
+> sum2  <- summary(mod2)
+> coef2 <- as.data.frame(summary(mod2)$coefficients) %>%
++   arrange(Estimate)
+> mod3 <- lm(PlusMinus/stint_seconds ~ . +lag(PlusMinus) -SeasonGame -quarter -lineup, 
++            data=df_dummys2)
+> sum3  <- summary(mod3)
+> coef3 <- as.data.frame(summary(mod3)$coefficients) %>%
++   arrange(Estimate)
+\end{Sinput}
+\end{Schunk}
+
+\subsection{PARTE 5: HeatMap Correlaciones Jugadores}
+
+Primero vamos a preparar los datos con la estructura que necesitamos para crear el heatmap:
+
+
+\begin{Schunk}
+\begin{Sinput}
+> match_firstplayer <- match(players, names(df_dummys_PlusMinus)) %>%
++             na.omit() %>%
++             min()
+> n <- dim(df_dummys_PlusMinus)[2]
+\end{Sinput}
+\end{Schunk}
+
+
+\begin{Schunk}
+\begin{Sinput}
+> correlations <- round(cor(model.matrix(~.-1, data=df_dummys_PlusMinus[,match_firstplayer:n])), 5)
+> corrplot(correlations, type = "upper", tl.col = "black", tl.srt = 90, tl.cex = 0.2)
+> col<- colorRampPalette(c("red", "white", "blue"))(20)
+> #heatmap(x = correlations, col = col, symm = TRUE)
+\end{Sinput}
+\end{Schunk}
+
+\subsection{PARTE 6: Variance Inflation Factor (VIF)}
+\begin{Schunk}
+\begin{Sinput}
+> #vif(mod1)
+\end{Sinput}
+\end{Schunk}
 
 
 \end{document}
